recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:3: error: reassignment to val
	if (level=0)	{for (i <- 1 to 3) 
                 ^